--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <div class="for-mobile">
       <h1>Turn your device!</h1>
-      <img src="https://static.thenounproject.com/png/1815848-200.png">
+      <img src="pig.png">
     </div>
 
     <script src="script.js"></script>
